--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>b1ececdc-5d5f-4eac-9a65-c36df27a832d</ProjectGuid>
+    <ProjectGuid>{B1ECECDC-5D5F-4EAC-9A65-C36DF27A832D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Logic</RootNamespace>
@@ -31,24 +31,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Class\Account.cs" />
+    <Compile Include="Class\AccountManager.cs" />
+    <Compile Include="Class\Game.cs" />
+    <Compile Include="Class\GameManager.cs" />
+    <Compile Include="Class\PlayedGame.cs" />
+    <Compile Include="Class\Player.cs" />
+    <Compile Include="Class\PlayerManager.cs" />
+    <Compile Include="DTO\AccountDTO.cs" />
+    <Compile Include="DTO\PlayerDTO.cs" />
+    <Compile Include="Interfase\IAccountDAL.cs" />
+    <Compile Include="Interfase\IAccountManagerDAL.cs" />
+    <Compile Include="Interfase\IPlayerDAL.cs" />
+    <Compile Include="Interfase\IPlayerManagerDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
