--- a/GameYamWeb/Properties/launchSettings.json
+++ b/GameYamWeb/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56266",
-      "sslPort": 44384
+      "applicationUrl": "http://localhost:18398",
+      "sslPort": 44326
     }
   },
   "profiles": {
-    "BoardGameOnline": {
+    "GameYamWeb": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7256;http://localhost:5256",
+      "applicationUrl": "https://localhost:7080;http://localhost:5080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
