Added Interface and DTO projects. Also fixed reference issues

--- a/GameYamWeb/GameYamWeb.csproj
+++ b/GameYamWeb/GameYamWeb.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Logic\Logic.csproj" />
+    <ProjectReference Include="..\Dal\Dal.csproj" />
+    <ProjectReference Include="..\DTO\DTO.csproj" />
   </ItemGroup>
 
 </Project>
