--- a/GameYamWeb/appsettings.json
+++ b/GameYamWeb/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-VCK4O5UP;Initial Catalog=GameYamDB;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
